Fix unneccessary scrollbars over 950px width

--- a/checkout/static/techtracking.css
+++ b/checkout/static/techtracking.css
@@ -26,6 +26,12 @@
     }
 }
 
+@media (min-width: 950px) {
+    .table-responsive {
+        overflow-x: inherit;
+    }
+}
+
 .container-fluid {
     max-width: 1100px;
 }
